main.css
@import url("https://fonts.googleapis.com/css2?family=Geist:wght@100..900&display=swap");

:root {
    font-family: "Geist", Helvetica, Helvetica, sans-serif;
}

button {
    border-radius: 0.25rem;
    border: none;
    background: white;
    padding: 0.5rem;
    text-transform: uppercase;
    border: none;
    background: #eee;
}

button:hover {
    cursor: pointer;
}

#editor-input-container input,
textarea {
    border: none;
    margin: 0.5rem;
    outline: none;
    font-family: inherit;
    line-height: 1.4rem;
}

#text-input {
    font-size: 1rem;
    min-height: 75vh;
    resize: none;
}

#search-input {
    padding: 0.5rem;
    border-radius: 0.25rem;
    outline: none;
    border: 2px solid #eee;
    background: rgb(248, 248, 248);
    font-size: 1rem;
}

#search-input:hover {
    background: white;
}

#title-input {
    font-size: 1.15rem;
}

body {
    align-items: center;
}

main {
    display: flex;
    flex-direction: row;
    justify-content: center;
}

#commands {
    display: flex;
    justify-content: end;
}

#editor-input-container {
    border: 2px solid #eee;
    border-radius: 0.5rem;
    margin-top: 1rem;
    padding: 0.5rem;
    width: 75vw;
    max-width: 800px;
    display: flex;
    flex-direction: column;
}

.note-element {
    padding: 0.5rem;
    text-transform: uppercase;
    font-size: 0.8rem;
    margin-bottom: 0.5rem;
    /* border: 2px solid black; */
    border-radius: 0.25rem;
    transition: background 0.2s ease-in-out;
}
.note-element:hover {
    background: #eee;
}

.note-element * {
    padding: 0;
    margin: 0;
}

.note-element button {
    padding: 0.3rem;
    border: 0;
    color: grey;
    background: #f6f6f6;
    margin-top: 0.5rem;
    margin-right: 1rem;
}

.note-element h3 {
    font-weight: normal;
}

#saved-notes {
    margin-right: 2rem;
    display: flex;
    flex-direction: column;
    min-width: 274px;
    margin-top: 3rem;
}

#editor {
    margin-top: 3rem;
}

#no-notes-message {
    color: grey;
}

.note-date {
    color: grey;
    margin-top: 0.5rem;
    font-size: 0.75rem;
}

.saved-note-body {
    margin: 0.25rem 0rem;
    color: #333;
}

#new-button {
    width: 50%;
    margin-bottom: 1rem;
    margin-top: 1.7rem;
}

#screen-size-warning {
    display: none;
}

#mobile-button-shower {
    display: none;
}

@media (max-width: 1280px) {
    #mobile-button-shower {
        display: block;
    }
    #editor {
        margin-top: 1rem;
    }
    #editor-input-container {
        width: auto;
        margin-top: 0;
    }

    main {
        display: flex;
        flex-direction: column;
    }

    #mobile-button-shower {
        /* background: red; */
        display: flex;
        justify-content: end;
    }

    #show-notes {
        width: 2rem;
    }

    #show-notes-svg {
        width: 100%;
    }
    #saved-notes {
        display: none;
        position: absolute;
        right: -1.5rem;
        top: 0rem;
        background: white;
        /* border: 3px solid black; */
        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
        border-radius: 0.25rem;
        border: 2px solid #eee;
        padding: 1rem;
    }
}

